# advent-of-code

./: LICENSE  README.md
2017/Day 1/: solutions.py
2017/Day 10/: solution_part2.py
2017/Day 15/: solutions.py
2017/Day 16/: solutions.py
2017/Day 18/: solution_part1.py  solution_part2.py
2017/Day 20/: solutions.py
2017/Day 22/: solution_part1.py
2017/Day 23/: solutions.py
2017/Day 24/: solutions.py
2017/Day 25/: solutions.py
2017/Day 3/: coordinates.txt
2017/Day 4/: solutions.py
2017/Day 7/: solutions.py
2018/Day 01/: Makefile
2018/Day 02/: solutions_1.cpp
2018/Day 03/: solutions_1.cpp  solutions_2.cpp
2018/Day 05/: solutions_1.cpp  solutions_2.cpp
2018/Day 06/: solutions_1.cpp  solutions_2.cpp
2018/Day 07/: solutions_1.cpp  solutions_2.cpp
2018/Day 08/: solutions_1.cpp  solutions_2.cpp
2018/Day 09/: solutions_1.cpp
2018/Day 1/: solutions.cpp
2018/Day 10/: solutions_1.cpp  solutions_2.cpp
2023/Day 1/: CMakeLists.txt  Day1.cpp
2023/Day 2/: CMakeLists.txt  Day2.cpp
2023/Day 3/: CMakeLists.txt  Day3.cpp
2023/Day 4/: .gitignore  CMakeLists.txt  CMakePresets.json  Card.cpp  Card.h  Day4.cpp  vcpkg.json
Day 1/: solutions.py
Day 10/: solutions.py
Day 11/: solutions.py
Day 12/: solutions.py
Day 13/: solutions.py
Day 14/: solutions.py
Day 15/: solutions.py
Day 16/: solutions.py
Day 17/: solutions.py
Day 18/: solution_part2.py  solutions.py
Day 19/: solutions.py
Day 2/: solutions.py
Day 20/: solutions.py
Day 21/: solutions.py
Day 22/: solution_part2.py  solutions.py
Day 23/: solutions.py
Day 24/: solutions.py
Day 25/: input.txt  solutions.py
Day 3/: solutions.py
Day 4/: solutions.py
Day 5/: solutions.py
Day 6/: solutions.py
Day 7/: solution_part1.py  solution_part2.py  solutions.py
Day 8/: solutions.py
Day 9/: solutions.py
(+71 files in other folders)
